# grounded_vla

./: .gitignore  README.md  pyproject.toml  report.tex  report_draft.md  requirements.txt  results.txt
colab/: 01_setup_drive_and_weights.ipynb  02_setup_data.ipynb  03_run_eval.ipynb  04_lora_finetune.ipynb  05_eval_with_lora.ipynb  COLAB.md  _build_notebooks.py
configs/: ora_llava.yaml  ora_mock.yaml  react_mistral.yaml  single_shot_llava.yaml
configs/datasets/: mind2web.yaml  scienceqa.yaml  synthetic.yaml  synthetic_sample.yaml
data/samples/: cc_manifest.json  make_samples.py  synthetic_sample.jsonl
grounded_vla/: __init__.py  action_parser.py  cli.py  env.py  lora.py  schemas.py
grounded_vla/agents/: __init__.py  base.py  ora_agent.py  prompts.py  react_agent.py  single_shot_agent.py
grounded_vla/backends/: __init__.py  base.py  llava.py  mistral.py  mock.py  registry.py
grounded_vla/data/: __init__.py  base.py  mind2web.py  registry.py  scienceqa.py  synthetic.py
grounded_vla/eval/: __init__.py  error_analysis.py  metrics.py  runner.py
grounded_vla/synthetic/: __init__.py  builder.py  review.py
grounded_vla/utils/: image.py  logging.py
kaggle/: 01_setup_weights.ipynb  02_setup_data.ipynb  03_run_eval.ipynb  04_lora_finetune.ipynb  05_eval_with_lora.ipynb  KAGGLE.md  _build_notebooks.py
scripts/: prepare_mind2web.py  prepare_scienceqa.py  run_full_eval.py
tests/: test_action_parser.py  test_agents.py  test_end_to_end.py  test_metrics.py  test_review_queue.py  test_runner_checkpoint.py
